first blog post

--- a/_posts/2022-01-01-post0.md
+++ b/_posts/2022-01-01-post0.md
@@ -1,11 +1,10 @@
 ---
-title: Post \#0
+title: Post 0
 date: 2022-01-01
 permalink: /posts/2022/01/post0
 tags:
   - random
 ---
-
 
 ### This is the “Hello World!” blog post!
 
