--- a/_posts/2022-01-01-post0.md
+++ b/_posts/2022-01-01-post0.md
@@ -12,6 +12,8 @@ tags:
 
 There are three aims for this blog:
 
+<!--more-->
+
 1. Inspired by  [Prof. David W. Hogg](https://cosmo.nyu.edu/hogg/)’s [research diary](http://hoggresearch.blogspot.com/), I want this is to be my research diary. I will try to do the updates every week only though. Hopefully it will give me some space to organise my thoughts and (more importantly) give me time to reflect on the things I am doing.
 2. As a placeholder for things(mostly code-related) that I have come across.
 3. Personal rant, though I will try to keep this to minimum.
